# patankar_cfd

./: CMakeLists.txt  README.md  main.cpp
FVM/: CMakeLists.txt
FVM/src/: CMakeLists.txt  FVMCalculateCoefficient.cpp  FVMCalculateCoefficient.h  TypeDefs_FVM.h  globalTypeDefs.h
FVM/tests/: CMakeLists.txt  test_modelEquations.cpp
LinearEquationSolver/: CMakeLists.txt
LinearEquationSolver/src/: CMakeLists.txt  MathUtils.cpp  MathUtils.h  coefficientMatrixGenerator.cpp  coefficientMatrixGenerator.h  denseMatrixSolvers.cpp  denseMatrixSolvers.h  globalTypeDefs.h  sparseMatrixSolvers.cpp  sparseMatrixSolvers.h
LinearEquationSolver/tests/: CMakeLists.txt  test_linearEquationSolver.cpp
NumericsKernel/: CMakeLists.txt
NumericsKernel/include/: KERNEL.h  KernelTypeDefs.h
NumericsKernel/src/: CMakeLists.txt  KERNEL.cpp  LinEqsSolvers.cpp  LinEqsSolvers.h  MathUtils.h  TypeDefs_NumericsKernel.h  denseMatrixSolvers.cpp  denseMatrixSolvers.h  sparseMatrixSolvers.cpp  sparseMatrixSolvers.h
NumericsKernel/tests/: CMakeLists.txt  test_Structs.h  test_linearEquationSolver.cpp  test_performance.cpp
modules/Common/: GlobalTypeDefs.h  Util.h
modules/FVM/: CMakeLists.txt
modules/FVM/src/: FVMCalculateCoefficient.cpp  FVMCalculateCoefficient.h  TypeDefs_FVM.h
modules/Mesh/include/: BaseMesh.h  structured2d.h
modules/Mesh/src/: BaseMesh.cpp  CMakeLists.txt  structured2d.cpp
modules/NumericsKernel/: CMakeLists.txt
modules/NumericsKernel/include/: KERNEL.h  KernelTypeDefs.h
modules/NumericsKernel/src/: CMakeLists.txt  KERNEL.cpp  LinEqsSolvers.cpp  LinEqsSolvers.h
test_modules/: CMakeLists.txt  FVM_modelEquations_test.cpp  KERNEL_linearEquationSolver_test.cpp  KERNEL_performance_test.cpp  KERNEL_test_Structs.h  MESH_Class_test.cpp  MESH_modelEquations_test.cpp
test_modules/Performance_Results/: performanceTestResults_dense_202639.txt  performanceTestResults_sparse_202639.txt
